2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/alerts/configure_alert_template.php: Fixed template 
	update. Thank you to Manuel Arostegui for the patch!

2011-11-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/snmpconsole/snmp_view.php: Added new free search and
	fix agent and OID combo search.

2011-11-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/snmpconsole/snmp_alert.php: Fixed bad time description.

	* godmode/reporting/visual_console_builder.editor.php
	 include/functions_visual_map.php: Now it's possible to link icons 
	 in visual console with a web page through the label. 

	* operation/visual_console/index.php
	 operation/visual_console/render_view.php
	 include/functions_config.php	 
	 operation/menu.php
	 godmode/menu.php
	 godmode/setup/setup.php
	 godmode/setup/setup_visuals.php
	 include/config_process.php: Added two new autorefresh 
	 parameters: one global and the other for visual console.

2011-11-17  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_network_map_enterprise.php,
	include/help/ja/help_view_services.php: Added missing help files.

2011-11-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events.php: Fixed delete operation in this view.

2011-11-16  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_ff_threshold.php: Fixed a typo.

2011-11-16  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_ff_threshold.php: Modified to be understood more
	easily.

2011-11-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_validate.php
	operation/events/events.php: Fixed php warning and a wrong 
	description.

2011-11-15 Sancho lerena <slerena@artica.es>

	* godmode/snmpconsole/snmp_trap_generator.php: Fixed tool to generate
	SNMP Traps. Was broken due a re-placement at last-time. 


2011-11-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/javascript/pandora.js: Added ajax callback for metaconsole